remove tab icon top

--- a/www/templates/00_tab_menu.html
+++ b/www/templates/00_tab_menu.html
@@ -1,4 +1,4 @@
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-color-active-positive">
     <ion-tab title="Home" icon="ion-home" nav-clear ui-sref="tabs.home">
         <ion-nav-view name="home-tab"></ion-nav-view>
     </ion-tab>
