--- a/www/templates/03_setting.html
+++ b/www/templates/03_setting.html
@@ -2,7 +2,7 @@
     <ion-content overflow-scroll="true">
         Hello Setting this is {{txt}}
     </ion-content>
-    <ion-tabs class="tabs-icon-top">
+    <ion-tabs>
         <ion-tab ng-click="go_page('tab/home')" title="Home" icon="ion-home" href="#/tab/home"></ion-tab>
     </ion-tabs>
 </ion-view>
